增加文章列表

--- a/assets/2018-08/wechat.html
+++ b/assets/2018-08/wechat.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello-world</title>
+    <title>wechat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>hello, world</h1>
-<p>这是我写下的第一篇文章</p>
+    <h2>wechat</h2>
+<h4>微信公众号客服插件</h4>
 
 </body>
 </html>
