--- a/assets/2018-09/new.html
+++ b/assets/2018-09/new.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello-world</title>
+    <title>new</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>hello, world</h1>
-<p>这是我写下的第一篇文章</p>
+    <h2>新的一天</h2>
 
 </body>
 </html>
